--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,6 @@ add_subdirectory(external/SFML)
 
 if(NOT TARGET sfml-graphics)
 	message(FATAL_ERROR "sfml-graphics is required!")
-elseif(NOT TARGET sfml-main)
-	message(FATAL_ERROR "sfml-main is required!")
 elseif(NOT TARGET sfml-system)
 	message(FATAL_ERROR "sfml-system is required!")
 elseif(NOT TARGET sfml-window)
@@ -24,20 +22,12 @@ if(NOT BUILD_SHARED_LIBS)
 	add_compile_definitions(SFML_STATIC)
 endif()
 
-if(SFML_USE_STATIC_STD_LIBS)
-	#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-	#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
-endif()
-
 add_executable(${PROJECT_NAME} WIN32 ${SRC_FILES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE "external/SFML/include")
 
-target_link_libraries(${PROJECT_NAME} "sfml-graphics;sfml-main;sfml-system;sfml-window")
+target_link_libraries(${PROJECT_NAME} "sfml-graphics;sfml-system;sfml-window")
 
-set_target_properties( ${PROJECT_NAME}
-    PROPERTIES
-    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
+set_target_properties( ${PROJECT_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin"
 )
